remove .html everywhere

--- a/about.html
+++ b/about.html
@@ -38,13 +38,13 @@
       <!-- Navigation -->
       <div class="col-lg-2 animated" id="mynav">
         <ul class="text-left">
-          <a href="/index.html">
+          <a href="/index">
             <li>Home</li>
           </a>
-          <a href="/about.html">
+          <a href="/about">
             <li>Work</li>
           </a>
-          <a href="/about.html">
+          <a href="/about">
             <li> <em>About</em></li>
           </a>
         </ul>
