--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <a href="">
             <li><em>Home</em></li>
           </a>
-          <a href="/about.html">
+          <a href="/about">
             <li>Work</li>
           </a>
           <a href="/about">
@@ -153,7 +153,7 @@
         <div class="container mt-5" id="work-tiles">
 
           <!-- Qlik -->
-          <div class="row animated tileWrap fadeInUp" id="first-work-tile" onclick="location.href='about.html';">
+          <div class="row animated tileWrap fadeInUp" id="first-work-tile" onclick="location.href='about';">
             <div class="col-lg-4 mt-3 tileTitle">
               <hr>
               <h3 class="work-tile-category">SOFTWARE ENG</h3>
