--- a/shopify.html
+++ b/shopify.html
@@ -50,13 +50,13 @@
             <!-- Navigation -->
             <div class="col-lg-2 animated" id="mynav">
                 <ul class="text-left">
-                    <a href="/index.html">
+                    <a href="/index">
                         <li>Home</li>
                     </a>
-                    <a href="/about.html">
+                    <a href="/about">
                         <li>Work</li>
                     </a>
-                    <a href="/about.html">
+                    <a href="/about">
                         <li> <em>About</em></li>
                     </a>
                 </ul>
@@ -159,7 +159,7 @@
                                 <em>This is why I’m passionate about working as a Web Developer with Shopify.</em>
                             </p>
                             <div class="text-center">
-                                <button class="learn-more mt-4" onclick="location.href='whymunir.html';">
+                                <button class="learn-more mt-4" onclick="location.href='whymunir';">
                                     <span class="circle" aria-hidden="true">
                                         <span class="icon arrow"></span>
                                     </span>
