--- a/whymunir.html
+++ b/whymunir.html
@@ -50,13 +50,13 @@
             <!-- Navigation -->
             <div class="col-lg-2 animated" id="mynav">
                 <ul class="text-left">
-                    <a href="/index.html">
+                    <a href="/index">
                         <li>Home</li>
                     </a>
-                    <a href="/about.html">
+                    <a href="/about">
                         <li>Work</li>
                     </a>
-                    <a href="/about.html">
+                    <a href="/about">
                         <li> <em>About</em></li>
                     </a>
                 </ul>
@@ -77,7 +77,7 @@
                             <p>
                                 My dedication to Web Development began in high school with simple HTML/CSS through
                                 codecademy. Soon enough, I was mastering Bootstrap and Javascript which allowed me to
-                                today create <a href="index.html">munir.xyz</a>, my personal portfolio website. This
+                                today create <a href="index">munir.xyz</a>, my personal portfolio website. This
                                 confidence led me to participate in hackathons such as CANDEV Government of Canada
                                 hackathon (which I won WOO!) and helped me get my first internship at Health Canada.
                                 <br><br>
@@ -130,7 +130,7 @@
                                 for positive impact in a team setting is what sets me apart from other candidates.
                             </p>
                             <div class="text-center">
-                                <button class="learn-more mt-4" onclick="location.href='coverletter.html';">
+                                <button class="learn-more mt-4" onclick="location.href='coverletter';">
                                     <span class="circle" aria-hidden="true">
                                         <span class="icon arrow"></span>
                                     </span>
