--- a/shopify.html
+++ b/shopify.html
@@ -39,6 +39,15 @@
     <link href="css/main.css" rel="stylesheet">
     <link href="css/button.css" rel="stylesheet">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-166232623-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-166232623-1');
+    </script>
 </head>
 
 <body>
