--- a/whymunir.html
+++ b/whymunir.html
@@ -46,7 +46,7 @@
             <!-- Navigation -->
             <div class="col-lg-2 animated" id="mynav">
                 <ul class="text-left">
-                    <a href="/index">
+                    <a href="/">
                         <li>Home</li>
                     </a>
                     <a href="/about">
