remove index everywhere

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
 
     gtag('config', 'UA-166232623-1');
   </script>
-  
+
 </head>
 
 <body>
@@ -48,7 +48,7 @@
       <!-- Navigation -->
       <div class="col-lg-2 animated" id="mynav">
         <ul class="text-left">
-          <a href="/index">
+          <a href="/">
             <li>Home</li>
           </a>
           <a href="/about">
