--- a/coverletter.html
+++ b/coverletter.html
@@ -59,7 +59,7 @@
             <!-- Navigation -->
             <div class="col-lg-2 animated" id="mynav">
                 <ul class="text-left">
-                    <a href="/index">
+                    <a href="/">
                         <li>Home</li>
                     </a>
                     <a href="/about">
