--- a/coverletter.html
+++ b/coverletter.html
@@ -174,8 +174,8 @@
                                 highlights some of my engineering and design skills. I also included a PDF that
                                 highlights the design process behind designing the app “Sweet Feet”. Although I am
                                 mainly hoping to work on front-end development, I am more than willing to take on any
-                                other web-development roles. I am also willing to consider working in Montreal if there
-                                are no positions left in Ottawa.
+                                other web-development roles. I am also willing to consider working in Montreal if that is 
+                                what it takes to work at Shopify.
                             </p>
                             <p>
                                 All in all, I believe what sets me apart from others:
