--- a/about.html
+++ b/about.html
@@ -31,7 +31,10 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-166232623-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
     gtag('js', new Date());
 
     gtag('config', 'UA-166232623-1');
@@ -64,21 +67,47 @@
       <main class="col-lg-10 mt-5">
 
         <div class="container">
-          <div class="row">
-            <div class="col-lg-6 text-left my-auto animated fadeIn" id="aboutMeProfilePic">
-              <img src="/img/about_me.jpg" class="rounded" style="max-width: 500px;" alt="">
+          <div class="row justify-content-center">
+            <div class="col-xl-6 text-left my-auto animated fadeIn" id="aboutMeProfilePic">
+              <img src="/img/about_me.jpg" class="rounded shadow" style="max-width: 500px;" alt="">
             </div>
 
-            <div class="col-xl-4 offset-xl-1">
-              <h1 class="animated fadeIn mt-4">About Me</h1>
+            <div class="col-xl-4 offset-xl-1 col-md-10 mt-md-5">
+              <h1 class="animated fadeIn">About Me</h1>
               <hr class="animated fadeIn">
               <p class="animated fadeIn mt-2">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sagittis nibh nec aliquam convallis.
-                Duis enim sem, molestie a lorem quis, ultrices porta lorem. Aliquam in tempor metus.<br><br>
-                Donec non erat et quam molestie lobortis ac at sem. Quisque eget blandit magna. Suspendisse placerat,
-                erat id vulputate pretium, augue orci bibendum nibh, vel cursus ante tortor at sapien. Pellentesque
-                tincidunt massa sed urna elementum, nec ullamcorper enim vestibulum. Nullam non lorem lectus. Ut tortor
-                ante, dignissim ac urna nec, luctus placerat arcu.
+                <b>Hey! I’m Munir</b>
+                <br><br>
+                I’m a student software engineer and designer who loves photography, working out, and how to use
+                technology to change lives. I learned many concepts of programming and design on my own and through
+                practice, and have had the opportunity to use my skills at Health Canada and Qlik.
+              </p>
+            </div>
+          </div>
+          <div class="row justify-content-md-center">
+            <div class="col-md-10 text-center mt-5">
+              <h2>
+                “Finding ways to mix programming with art and design is my passion”
+              </h2>
+            </div>
+          </div>
+          <div class="row justify-content-center">
+            <div class="col-lg-10 col-md-10 mt-3">
+              <p>
+                As a kid I tried to find any way to use basic Photoshop in my school projects. Eventually I was using
+                After Effects to create movies for the class. <b>Programming however is where I was able to create
+                something dynamic while still using my love for art and design.</b>
+              </p>
+              <p class="mt-2">
+                I enrolled in the University of Ottawa for Mechanical Engineering and Computing Technology in 2017.
+                During my free time between studying I joined several student clubs where I was able to design brands
+                and websites to make my campus look more beautiful while making a bunch of lifelong friends and
+                relationships along the way. It helped me develop my positive leadership skills that I take with me into
+                the work environment and other aspects of my life.
+              </p>
+              <p class="mt-2">
+                <b>Interested in my work or background?</b> Send me <a href="mailto:munir.aljaw@gmail.com">an email</a> or
+                shoot me a message on <a href="https://www.linkedin.com/in/munir-aljawahari/">linkedin.</a>
               </p>
             </div>
           </div>
@@ -88,9 +117,9 @@
         <div class="container" data-aos="fade-up" data-aos-duration="600" id="photographyContainer">
 
           <div class="row justify-content-md-center">
-            <div class="col-lg-3 text-center">
+            <div class="col-lg-5 text-center">
               <h2>Photography</h2>
-              <p>I love taking photos.</p>
+              <p>Here are some of my favorite photos from my last travel</p>
             </div>
           </div>
 
