--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
           <a href="">
             <li><em>Home</em></li>
           </a>
-          <a href="/about">
+          <!-- <a href="/about">
             <li>Work</li>
-          </a>
+          </a> -->
           <a href="/about">
             <li>About</li>
           </a>
@@ -152,6 +152,25 @@
           <div class="row animated tileWrap fadeInUp" id="first-work-tile" onclick="location.href='about';">
             <div class="col-lg-4 mt-3 tileTitle">
               <hr>
+              <h3 class="work-tile-category">DESIGN</h3>
+              <h2 class="work-tile-title">uOttaHack 2020</h2>
+              <p class="mt-2">
+                Lead the design for the biggest Hackathon in Ottawa that took place in the University of Ottawa.
+                <br><br>
+                <b>View case study</b>
+              </p>
+            </div>
+            <div class="col-lg-6 offset-md-2">
+              <a href="">
+                <div class="shadow tilePic rounded zoomHover" id="uottahack"></div>
+              </a>
+            </div>
+          </div>
+
+          <!-- Second Work Tile -->
+          <div class="row mt-5 tileWrap" data-aos="fade-up" data-aos-duration="800" style="margin-bottom: 6rem;">
+            <div class="col-lg-4 mt-3 tileTitle">
+              <hr>
               <h3 class="work-tile-category">SOFTWARE ENG</h3>
               <h2 class="work-tile-title">Qlik</h2>
               <p class="mt-2">
@@ -168,26 +187,7 @@
             </div>
           </div>
 
-          <!-- Second Work Tile -->
-          <div class="row mt-5 tileWrap" data-aos="fade-up" data-aos-duration="800" style="margin-bottom: 6rem;">
-            <div class="col-lg-4 mt-3 tileTitle">
-              <hr>
-              <h3 class="work-tile-category">DESIGN</h3>
-              <h2 class="work-tile-title">uOttaHack 2020</h2>
-              <p class="mt-2">
-                Lead the design for the biggest Hackathon in Ottawa that took place in the University of Ottawa.
-                <br><br>
-                <b>View case study</b>
-              </p>
-            </div>
-            <div class="col-lg-6 offset-md-2">
-              <a href="">
-                <div class="shadow tilePic rounded zoomHover" id="uottahack"></div>
-              </a>
-            </div>
-          </div>
-
-          <div class="row">
+          <!-- <div class="row">
             <div class="col text-center">
               <div id="container">
                 <button class="learn-more">
@@ -200,7 +200,7 @@
                 </button>
               </div>
             </div>
-          </div>
+          </div> -->
 
         </div>
 
