--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <!-- Navigation -->
       <div class="col-lg-2 animated fadeIn" id="mynav">
         <ul class="text-left">
-          <a href="">
+          <a href="/">
             <li><em>Home</em></li>
           </a>
           <!-- <a href="/about">
