--- a/shopify.html
+++ b/shopify.html
@@ -59,12 +59,12 @@
             <!-- Navigation -->
             <div class="col-lg-2 animated" id="mynav">
                 <ul class="text-left">
-                    <a href="/index">
+                    <a href="/">
                         <li>Home</li>
                     </a>
-                    <a href="/about">
+                    <!-- <a href="/about">
                         <li>Work</li>
-                    </a>
+                    </a> -->
                     <a href="/about">
                         <li> <em>About</em></li>
                     </a>
