--- a/cover.html
+++ b/cover.html
@@ -62,9 +62,9 @@
                     <a href="/">
                         <li>Home</li>
                     </a>
-                    <a href="/about">
+                    <!-- <a href="/about">
                         <li>Work</li>
-                    </a>
+                    </a> -->
                     <a href="/about">
                         <li> <em>About</em></li>
                     </a>
