cover letter fix

--- a/coverletter.html
+++ b/coverletter.html
@@ -108,7 +108,7 @@
                                 pages that could send Health Canada data within minutes. The team loved it, which led me
                                 to my next innovation of improving a shared excel sheet of project management data into
                                 a Drupal website where others can collaborate simultaneously. It was a huge success!
-                                They loved my positive synergy to the team and decided to offer me a role part-time
+                                <b>They loved my positive synergy to the team</b> and decided to offer me a role part-time
                                 during school.
                             </p>
                             <p>
@@ -140,8 +140,9 @@
                             </figure>
                             <p>
                                 I then used design to spread the love for my culture and country, Iraq. I joined the
-                                Iraqi Student Association and filled in the technical role to develop their website
-                                (isaottawa.com) and also redesign their brand and events. Making campus appear a little
+                                Iraqi Student Association and filled in the technical role to develop their 
+                                <a href="isaottawa.com"> website</a>
+                                and also redesign their brand and events. Making campus appear a little
                                 more aesthetic was a big deal to me, and I was glad I was able to do that while making a
                                 ton of friends and enriching my University experience. My design experience then led me
                                 to create something for the good of society. I was blessed with the opportunity to
@@ -206,19 +207,8 @@
                                 hope that you see the love and creativity that I put into my application!<br>
                                 ❤️ & 🎨<br><br>
                                 Regards,<br>
-                                Munir Aljawahari
-
+                                <em>Munir Aljawahari</em>
                             </p>
-                            <div class="text-center">
-                                <button class="learn-more mt-4" onclick="location.href='coverletter';">
-                                    <span class="circle" aria-hidden="true">
-                                        <span class="icon arrow"></span>
-                                    </span>
-                                    <span class="button-text">
-                                        <h3>Cover Letter</h3>
-                                    </span>
-                                </button>
-                            </div>
                         </div>
                     </div>
 
