--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <!-- <a href="/about">
             <li>Work</li>
           </a> -->
-          <a href="/about">
+          <a href="/pages/about">
             <li>About</li>
           </a>
         </ul>
