--- a/shopify.html
+++ b/shopify.html
@@ -65,7 +65,7 @@
                     <!-- <a href="/about">
                         <li>Work</li>
                     </a> -->
-                    <a href="/about">
+                    <a href="/pages/about">
                         <li> <em>About</em></li>
                     </a>
                 </ul>
