--- a/whyme.html
+++ b/whyme.html
@@ -52,7 +52,7 @@
                     <!-- <a href="/about">
                         <li>Work</li>
                     </a> -->
-                    <a href="/about">
+                    <a href="/pages/about">
                         <li> <em>About</em></li>
                     </a>
                 </ul>
