moved animate.min.css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Animate CSS -->
-  <link href="animate.min.css" rel="stylesheet">
+  <link href="/css/animate.min.css" rel="stylesheet">
 
   <!-- Animate on Scroll -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
