--- a/pages/about.html
+++ b/pages/about.html
@@ -221,7 +221,7 @@
 
   <!-- Medium Zoom -->
   <script src="medium-zoom.min.js"></script>
-  <script src="main.js"></script>
+  <script src="/js/main.js"></script>
 
   <script>
     // Initialize AOS 
