--- a/coverletter.html
+++ b/coverletter.html
@@ -296,7 +296,7 @@
 
 
     <!-- Medium Zoom -->
-    <script src="medium-zoom.min.js"></script>
+    <script src="/js/medium-zoom.min.js"></script>
     <script src="/js/main.js"></script>
 
     <script>
