--- a/pages/about.html
+++ b/pages/about.html
@@ -220,7 +220,7 @@
 
 
   <!-- Medium Zoom -->
-  <script src="medium-zoom.min.js"></script>
+  <script src="/js/medium-zoom.min.js"></script>
   <script src="/js/main.js"></script>
 
   <script>
