--- a/pages/uottahack.html
+++ b/pages/uottahack.html
@@ -240,7 +240,7 @@
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <!-- Medium Zoom -->
-    <script src="medium-zoom.min.js"></script>
+    <script src="/js/medium-zoom.min.js"></script>
     <script src="/js/main.js"></script>
 
   </body>
