--- a/whymunir.html
+++ b/whymunir.html
@@ -222,7 +222,7 @@
 
 
     <!-- Medium Zoom -->
-    <script src="medium-zoom.min.js"></script>
+    <script src="/js/medium-zoom.min.js"></script>
     <script src="/js/main.js"></script>
 
     <script>
