--- a/pages/about.html
+++ b/pages/about.html
@@ -18,14 +18,14 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Animate CSS -->
-  <link href="/css/animate.min.css" rel="stylesheet">
+  <link href="../css/animate.min.css" rel="stylesheet">
 
   <!-- Animate on Scroll -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
   <!-- Custom CSS -->
-  <link href="css/main.css" rel="stylesheet">
-  <link href="css/about.css" rel="stylesheet">
+  <link href="../css/main.css" rel="stylesheet">
+  <link href="../css/about.css" rel="stylesheet">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-166232623-1"></script>
@@ -220,8 +220,8 @@
 
 
   <!-- Medium Zoom -->
-  <script src="/js/medium-zoom.min.js"></script>
-  <script src="/js/main.js"></script>
+  <script src="../js/medium-zoom.min.js"></script>
+  <script src="../js/main.js"></script>
 
   <script>
     // Initialize AOS 
