fixed picture links

--- a/pages/about.html
+++ b/pages/about.html
@@ -125,16 +125,16 @@
           <div class="container-fluid" data-aos="fade-up" data-aos-duration="600">
             <div class="row" id="photographyRow">
               <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
-                <img src="img/IMG_2008.jpg" class="img-fluid zoom">
-                <img src="img/IMG_6575.JPG" class="img-fluid zoom">
+                <img src="../img/IMG_2008.jpg" class="img-fluid zoom">
+                <img src="../img/IMG_6575.JPG" class="img-fluid zoom">
               </div>
               <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
-                <img src="img/IMG_2829.jpg" class="img-fluid zoom">
-                <img src="img/IMG_3953.JPG" class="img-fluid zoom">
+                <img src="../img/IMG_2829.jpg" class="img-fluid zoom">
+                <img src="../img/IMG_3953.JPG" class="img-fluid zoom">
               </div>
               <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
-                <img src="img/IMG_2073.jpg" class="img-fluid zoom">
-                <img src="img/IMG_7411.JPG" class="img-fluid zoom">
+                <img src="../img/IMG_2073.jpg" class="img-fluid zoom">
+                <img src="../img/IMG_7411.JPG" class="img-fluid zoom">
               </div>
             </div>
           </div>
@@ -212,8 +212,8 @@
   </div>
 
   <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.slim.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../vendor/jquery/jquery.slim.min.js"></script>
+  <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Animate on Scroll -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
