--- a/pages/uottahack.html
+++ b/pages/uottahack.html
@@ -21,7 +21,10 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-166232623-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
+
+      function gtag() {
+        dataLayer.push(arguments);
+      }
       gtag('js', new Date());
 
       gtag('config', 'UA-166232623-1');
@@ -43,7 +46,8 @@
           <!-- Main Content -->
           <h1 class="title mt-2">uOttaHack 2020</h1>
           <p class="mt-2"><b>Role</b> - Designer<br></p>
-          <p class="mt-1"><b>Responsibilities</b> - Redesign the brand, logo, website, swag, communication images<br></p>
+          <p class="mt-1"><b>Responsibilities</b> - Redesign the brand, logo, website, swag, communication images<br>
+          </p>
           <p class="mt-1"><b>Project Length</b> - 8 months<br></p>
           <p class="mt-1"><b>Team Members</b> - 2 Designers: Munir Aljawahari & Alistair McCarten</p>
           <!-- <p class="mt-1"> <a href="#">Click here to see the final design</a> </p> -->
@@ -56,19 +60,25 @@
 
           <!-- Context -->
           <h2 class="mt-3">Context</h2>
-          <p class="mt-1">uOttaHack is the University of Ottawa's <b>largest ever hackathon</b>, hosted by students for students of all studies across Canada.
-            This year, uOttaHack 3 welcomed over 400 students from February 7th-9th to collaborate on projects, learn at workshops, and develop their innovative ideas.
-            The uOttaHack committee decided to <b>launch a rebrand</b> that will represent this special uOttaHack and continue to represent the face of uOttaHack for years to come.</p>
+          <p class="mt-1">uOttaHack is the University of Ottawa's <b>largest ever hackathon</b>, hosted by students for
+            students of all studies across Canada.
+            This year, uOttaHack 3 welcomed over 400 students from February 7th-9th to collaborate on projects, learn at
+            workshops, and develop their innovative ideas.
+            The uOttaHack committee decided to <b>launch a rebrand</b> that will represent this special uOttaHack and
+            continue to represent the face of uOttaHack for years to come.</p>
 
 
           <!-- Previous Design -->
           <h2 class="mt-3">Previous Design</h2>
           <p class="mt-1">In previous years, uOttaHack was <b>struggling to have a consistent design</b>.
-            In 2018, uOttahack..... In 2019, uOttaHack adopted a trendy isometric illustration theme to appeal to sponsors and hackers.
-            We wanted to give uOttaHack a <b>new logo and theme</b> that would remain on trend throughout the years <b>sustain through trends</b> but also adapt to seem different every year.</p>
+            In 2018, uOttahack..... In 2019, uOttaHack adopted a trendy isometric illustration theme to appeal to
+            sponsors and hackers.
+            We wanted to give uOttaHack a <b>new logo and theme</b> that would remain on trend throughout the years
+            <b>sustain through trends</b> but also adapt to seem different every year.</p>
 
           <img src="img/oldHackathon.png" class="img-fluid rounded zoom">
-          <p class="text-center caption"><em>Comparison of the 2018 homepage (left) and 2019 homepage (right) for uOttaHack.</em></p>
+          <p class="text-center caption"><em>Comparison of the 2018 homepage (left) and 2019 homepage (right) for
+              uOttaHack.</em></p>
 
 
           <!-- Design Process -->
@@ -78,14 +88,15 @@
 
             <div class="col-lg-4 my-auto">
               <p>
-                We wanted to adopt a <b>minimalistic</b> look for uOttaHack while simultaneously 
+                We wanted to adopt a <b>minimalistic</b> look for uOttaHack while simultaneously
                 integrating with the University. I started by analysing the current <b>symbols of the university</b>,
                 followed by researching logos that revolve around the letter U.
               </p>
             </div>
 
             <div class="col-lg-8">
-              <img src="img/schoolmotif.png" class="img-fluid mx-auto d-block rounded shadow zoom" style="max-height: 22rem;">
+              <img src="img/schoolmotif.png" class="img-fluid mx-auto d-block rounded shadow zoom"
+                style="max-height: 22rem;">
               <p class="text-center caption mt-1"><em>Proposed logos that were scrapped.</em></p>
             </div>
 
@@ -97,11 +108,14 @@
           <img src="img/schoolmotif.png" class="img-fluid mx-auto d-block rounded shadow zoom" style="max-height: 24rem;">
           <p class="text-center caption"><em>The three main symbols related to the City of Ottawa and uOttawa.</em></p> -->
 
-          <img src="img/logoinspo.png" class="img-fluid mx-auto d-block rounded mt-5 shadow zoom" style="max-height: 30rem;">
+          <img src="img/logoinspo.png" class="img-fluid mx-auto d-block rounded mt-5 shadow zoom"
+            style="max-height: 30rem;">
           <p class="text-center caption mt-1"><em>My favorite logos that helped guide my design.</em></p>
 
-          <p class="mt-3">I went through many renditions of possible logos, however, none of the following felt <b>right</b>.
-            Whenever I felt stuck on a certain design, I'd return to my notebook and continue sketching possible logos.</p>
+          <p class="mt-3">I went through many renditions of possible logos, however, none of the following felt
+            <b>right</b>.
+            Whenever I felt stuck on a certain design, I'd return to my notebook and continue sketching possible logos.
+          </p>
 
           <img src="img/rejects2.jpg" class="img-fluid mx-auto d-block rounded mt-2 shadow zoom">
           <p class="text-center caption mt-1"><em>Proposed logos that were scrapped.</em></p>
@@ -127,12 +141,16 @@
 
           </div>
 
-          <p class="mt-2">Purple was the base color for most designs. It was a dark color that allowed <b>flexibility</b> when choosing a secondary color to include.
-          The addition of orange and peach to the color palette provided the much needed <b>contrast</b>. Lastly, the blue provided the needed <b>transition</b>
-          between the purple and orange.</p>
+          <p class="mt-2">Purple was the base color for most designs. It was a dark color that allowed
+            <b>flexibility</b> when choosing a secondary color to include.
+            The addition of orange and peach to the color palette provided the much needed <b>contrast</b>. Lastly, the
+            blue provided the needed <b>transition</b>
+            between the purple and orange.</p>
 
-          <p>The illustrations that were used were taken from paaaaterns. We felt that the illustration style complimented the color scheme that was already defined
-            In addition, illustrations from humaaans, and the public humans library, and whooosh. All the types of illustrations used were alike, and could be combined
+          <p>The illustrations that were used were taken from paaaaterns. We felt that the illustration style
+            complimented the color scheme that was already defined
+            In addition, illustrations from humaaans, and the public humans library, and whooosh. All the types of
+            illustrations used were alike, and could be combined
             to generate many social media assets ?
           </p>
 
@@ -151,30 +169,37 @@
 
           </div>
 
-          <p>The next major task was to design a webpage that combined all of the elements listed above for a seamless experience. 
-            The goal was to showcase the rebrand of the hackathon while enticing students and sponsors to participate 
+          <p>The next major task was to design a webpage that combined all of the elements listed above for a seamless
+            experience.
+            The goal was to showcase the rebrand of the hackathon while enticing students and sponsors to participate
           </p>
 
           <p>designing swag
-            I worked with my design partner Alistair to design physical assets that would be given to hackers during the hackathon.
+            I worked with my design partner Alistair to design physical assets that would be given to hackers during the
+            hackathon.
             All swag was made to conform to the style guide that we curated.
           </p>
 
           <p>Graphics
-            in addition to swag, I also had the responsibiliy of creating many social media assets for facebook, instagram, linkedin. These assets included graphics 
-            such as promotional content, countdown posts, as well as posters that would be hung around campus (however did not get printed due to time constraints)
-            
+            in addition to swag, I also had the responsibiliy of creating many social media assets for facebook,
+            instagram, linkedin. These assets included graphics
+            such as promotional content, countdown posts, as well as posters that would be hung around campus (however
+            did not get printed due to time constraints)
+
           </p>
 
           <p>
             takeaways
             a rebrand is not easy
-            i did not expect the rebrand to take the most of the design process. it took a long time because it would serve as the foundation for all the work that
+            i did not expect the rebrand to take the most of the design process. it took a long time because it would
+            serve as the foundation for all the work that
             would stream into the brand
 
             spend time into making a thorough style guide
-            i underestimated the value of a style guide, especially when working on a team. luckily, i only had one partner, however, i see how important it is when
-            working on a large team. it prevents mistakes being made, and ensures all designers are on the same page. i hope to keep designing in large groups
+            i underestimated the value of a style guide, especially when working on a team. luckily, i only had one
+            partner, however, i see how important it is when
+            working on a large team. it prevents mistakes being made, and ensures all designers are on the same page. i
+            hope to keep designing in large groups
             to continue my group contribution skills.
           </p>
 
@@ -219,11 +244,12 @@
           <h2>Graphics</h2>
 
           <figure class="figure mx-auto d-block text-center">
-            <img src="img/printPoster-20.jpg" class="figure-img img-fluid rounded shadow zoom" style="max-height: 36rem;">
+            <img src="img/printPoster-20.jpg" class="figure-img img-fluid rounded shadow zoom"
+              style="max-height: 36rem;">
             <figcaption class="caption">print poster.</figcaption>
           </figure>
 
-          
+
           <figure class="figure mx-auto d-block text-center">
             <img src="img/instagram-21.jpg" class="figure-img img-fluid rounded shadow zoom" style="max-height: 42rem;">
             <figcaption class="caption">The final logo.</figcaption>
