about me page wip

--- a/pages/about copy.html
+++ b/pages/about copy.html
@@ -161,7 +161,8 @@
             between the purple
             and the orange.</p>
 
-          <p>To occupy the background and contribute to the playful mood we used <a href="https://products.ls.graphics/paaatterns/" target="_blank">paaatterns</a>, a free
+          <p>To occupy the background and contribute to the playful mood we used <a
+              href="https://products.ls.graphics/paaatterns/" target="_blank">paaatterns</a>, a free
             library of background illustrations from <a href="https://www.ls.graphics/" target="_blank">ls.graphics</a>.
             In addition, illustrations from humaaans, and the public humans library, and whooosh. All the types of
             illustrations used were alike, and could be combined
