--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
 
       <!-- Main Content -->
-      <main class="transition-fade col-lg-10 mainContent" id="swup">
+      <main class="col-lg-10 mainContent">
 
         <!-- Name and Video -->
         <div class="container">
@@ -72,8 +72,8 @@
               <hr class="animated fadeIn">
               <p class="animated fadeIn mt-2 pr-3" id="blurb">
                 A student based in Ottawa that focuses on engineering beautiful user experiences. Previously
-                interned at Qlik as a Software Engineer and at Health Canada as a Web Developer.
-                Currently enrolled in my 4th year at uOttawa and seeking a Fall 2020 Internship.
+                interned at University of Ottawa, Qlik, and Health Canada.
+                Currently enrolled in my 4th year at uOttawa and seeking a Summer 2021 Internship.
               </p>
 
               <!-- Contact Buttons -->
@@ -148,7 +148,7 @@
         <!-- Work Showcase -->
         <div class="container mt-5" id="work-tiles">
 
-          <!-- Qlik -->
+          <!-- uOttaHack -->
           <div class="row animated tileWrap fadeInUp" id="first-work-tile" onclick="location.href='about';">
             <div class="col-lg-4 mt-3 tileTitle">
               <hr>
@@ -167,7 +167,7 @@
             </div>
           </div>
 
-          <!-- Second Work Tile -->
+          <!-- Qlik -->
           <div class="row mt-5 tileWrap" data-aos="fade-up" data-aos-duration="800" style="margin-bottom: 6rem;">
             <div class="col-lg-4 mt-3 tileTitle">
               <hr>
@@ -186,21 +186,6 @@
               </a>
             </div>
           </div>
-
-          <!-- <div class="row">
-            <div class="col text-center">
-              <div id="container">
-                <button class="learn-more">
-                  <span class="circle" aria-hidden="true">
-                    <span class="icon arrow"></span>
-                  </span>
-                  <span class="button-text">
-                    <h3>View all work</h3>
-                  </span>
-                </button>
-              </div>
-            </div>
-          </div> -->
 
         </div>
 
@@ -265,7 +250,7 @@
                   </div>
                 </a>
               </div>
-              <p class="mt-1">© 2020 Munir Aljawahari's Portfolio</p>
+              <p class="mt-1">© 2020 Munir Alsafi's Portfolio</p>
             </div>
           </div>
         </div>
