--- a/pages/about.html
+++ b/pages/about.html
@@ -202,7 +202,7 @@
                   </div>
                 </a>
               </div>
-              <p class="mt-1">© 2020 Munir Aljawahari's Portfolio</p>
+              <p class="mt-1">© 2020 Munir Alsafi's Portfolio</p>
             </div>
           </div>
         </div>
