finished uottahack page

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <h2 class="animated fadeIn pr-2" id="occupation">Software Engineer & Designer</h2>
               <hr class="animated fadeIn">
               <p class="animated fadeIn mt-2 pr-3" id="blurb">
-                A student based in Ottawa that focuses on engineering beautiful user experiences. Previously
+                A student from Ottawa that focuses on engineering beautiful user experiences. Previously
                 interned at University of Ottawa, Qlik, and Health Canada.
                 Currently enrolled in my 4th year at uOttawa and seeking a Summer 2021 Internship.
               </p>
