--- a/pages/uottahack.html
+++ b/pages/uottahack.html
@@ -177,11 +177,11 @@
               provide contrast. The shades of blue were used to transition
               between the purple and the orange.</p>
 
-            <p>To occupy the background and contribute to the playful mood we used libraries such as 
+            <p>To occupy the background and contribute to the playful mood we used libraries such as
               <a href="https://products.ls.graphics/paaatterns/" target="_blank">paaatterns</a>,
               <a href="">humaaans</a> and
-              <a href="https://www.ls.graphics/illustrations/whoosh">whooosh</a>. 
-              These libraries were critical when making various social media posts as they allowed us to 
+              <a href="https://www.ls.graphics/illustrations/whoosh">whooosh</a>.
+              These libraries were critical when making various social media posts as they allowed us to
               convey messages while keeping a design theme.
             </p>
 
@@ -201,94 +201,89 @@
             </div>
           </div>
 
-
-          <p>The next major task was to design a webpage that combined all of the elements listed above for a seamless
-            experience.
-            The goal was to showcase the rebrand of the hackathon while enticing students and sponsors to participate
-          </p>
-
-          <p>designing swag
-            I worked with my design partner Alistair to design physical assets that would be given to hackers during the
-            hackathon.
-            All swag was made to conform to the style guide that we curated.
-          </p>
-
-          <p>Graphics
-            in addition to swag, I also had the responsibiliy of creating many social media assets for facebook,
-            instagram, linkedin. These assets included graphics
-            such as promotional content, countdown posts, as well as posters that would be hung around campus (however
-            did not get printed due to time constraints)
-
-          </p>
-
-          <p>
-            takeaways
-            a rebrand is not easy
-            i did not expect the rebrand to take the most of the design process. it took a long time because it would
-            serve as the foundation for all the work that
-            would stream into the brand
-
-            spend time into making a thorough style guide
-            i underestimated the value of a style guide, especially when working on a team. luckily, i only had one
-            partner, however, i see how important it is when
-            working on a large team. it prevents mistakes being made, and ensures all designers are on the same page. i
-            hope to keep designing in large groups
-            to continue my group contribution skills.
-          </p>
-
           <!-- Website Design -->
-          <h2 class="mt-3">Website Design</h2>
+          <div data-aos="fade-in" data-aos-duration="600" data-aos-delay="400">
+            <h2 class="mt-3">Website Design</h2>
+            <hr>
+            <p class="mt-1">
+              The goal was to showcase the rebrand of the hackathon while enticing students and sponsors to participate
+            </p>
 
-          <div class="row justify-content-center mt-3">
+            <div class="row justify-content-center mt-3">
 
-            <figure class="figure col-lg-6 my-auto text-center">
-              <img src="../img/web1.jpg" class="figure-img img-fluid zoom">
-              <figcaption class="caption">The final logo.</figcaption>
+              <figure class="figure col-lg-6 my-auto text-center">
+                <img src="../img/web1.jpg" class="figure-img img-fluid zoom">
+                <figcaption class="caption">The initial landing page</figcaption>
+              </figure>
+
+              <figure class="figure col-lg-6 my-auto text-center">
+                <img src="../img/web2.jpg" class="figure-img img-fluid zoom">
+                <figcaption class="caption">Description of uOttaHack</figcaption>
+              </figure>
+
+            </div>
+
+            <div class="row justify-content-center mt-3">
+
+              <figure class="figure col-lg-6 my-auto text-center">
+                <img src="../img/web4.jpg" class="figure-img img-fluid zoom">
+                <figcaption class="caption">Location & FAQs</figcaption>
+              </figure>
+
+              <figure class="figure col-lg-6 my-auto text-center">
+                <img src="../img/web5.jpg" class="figure-img img-fluid zoom">
+                <figcaption class="caption">Past years and sponsorship section</figcaption>
+              </figure>
+
+            </div>
+          </div>
+
+          <!-- Graphics & Merch -->
+          <div data-aos="fade-in" data-aos-duration="600" data-aos-delay="400">
+            <h2 class="mt-3">Graphics & Merch</h2>
+            <hr>
+            <p>
+              These are some of the social media & graphical assets that were made and shared on social media platforms.
+            </p>
+
+            <figure class="figure my-auto text-center">
+              <img src="../img/nametags.jpg" class="figure-img img-fluid zoom mt-3">
+              <figcaption class="caption">Nametag design</figcaption>
             </figure>
 
-            <figure class="figure col-lg-6 my-auto text-center">
-              <img src="../img/web2.jpg" class="figure-img img-fluid zoom">
-              <figcaption class="caption">The final logo.</figcaption>
-            </figure>
+            <div class="row justify-content-center d-flex align-items-center mt-3">
+              <figure class="figure mx-auto d-block text-center mt-3">
+                <img src="../img/printPoster-20.jpg" class="figure-img img-fluid zoom" style="max-height: 36rem;">
+                <figcaption class="caption">Physical poster design</figcaption>
+              </figure>
+
+              <figure class="figure mx-auto d-block text-center mt-3">
+                <img src="../img/instagram-21.jpg" class="figure-img img-fluid zoom" style="max-height: 42rem;">
+                <figcaption class="caption">Instagram page design</figcaption>
+              </figure>
+            </div>
 
           </div>
 
-          <div class="row justify-content-center mt-3">
-
-            <figure class="figure col-lg-6 my-auto text-center">
-              <img src="../img/web4.jpg" class="figure-img img-fluid zoom">
-              <figcaption class="caption">The final logo.</figcaption>
-            </figure>
-
-            <figure class="figure col-lg-6 my-auto text-center">
-              <img src="../img/web5.jpg" class="figure-img img-fluid zoom">
-              <figcaption class="caption">The final logo.</figcaption>
-            </figure>
-
+          <!-- Graphics & Merch -->
+          <div data-aos="fade-in" data-aos-duration="600" data-aos-delay="400">
+            <h2 class="mt-3">Takeaways</h2>
+            <hr>
+            <p>
+              I learned that a rebrand is a lot easier said than done. I underestimated how much time it would take
+              to recreate a design style guide.
+            </p>
+            <p>
+              However, spending time on the design style guide proved to be useful
+              as it allowed my partner to recreate assets in the same vision. Although I was only working with one other
+              designer, the style guide prevented discrepancies in the design, and made it easier to convey the theme
+              to other associates
+  
+              My next goal is to design within a larger team to expand my design workflow knowledge.
+            </p>
           </div>
 
-          <h2>Swag</h2>
-
-          <figure class="figure my-auto text-center">
-            <img src="../img/nametags.jpg" class="figure-img img-fluid zoom">
-            <figcaption class="caption">Nametags.</figcaption>
-          </figure>
-
-          <h2>Graphics</h2>
-
-          <figure class="figure mx-auto d-block text-center">
-            <img src="../img/printPoster-20.jpg" class="figure-img img-fluid zoom" style="max-height: 36rem;">
-            <figcaption class="caption">print poster.</figcaption>
-          </figure>
-
-
-          <figure class="figure mx-auto d-block text-center">
-            <img src="../img/instagram-21.jpg" class="figure-img img-fluid zoom" style="max-height: 42rem;">
-            <figcaption class="caption">The final logo.</figcaption>
-          </figure>
-
-          <h2>Takeaways</h2>
-
+          
         </div>
 
         <!-- Footer -->
