--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <div class="container mt-5" id="work-tiles">
 
           <!-- uOttaHack -->
-          <div class="row animated tileWrap fadeInUp" id="first-work-tile" onclick="location.href='about';">
+          <div class="row animated tileWrap fadeInUp" id="first-work-tile" onclick="location.href='/pages/uottahack';">
             <div class="col-lg-4 mt-3 tileTitle">
               <hr>
               <h3 class="work-tile-category">DESIGN</h3>
