--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
               <h3 class="work-tile-category">DESIGN</h3>
               <h2 class="work-tile-title">uOttaHack 2020</h2>
               <p class="mt-2">
-                Lead the design for the biggest Hackathon in Ottawa that took place in the University of Ottawa.
+                Lead the design of the biggest student Hackathon in Ottawa.
                 <br><br>
                 <b>View case study</b>
               </p>
@@ -172,7 +172,7 @@
               <h3 class="work-tile-category">SOFTWARE ENG</h3>
               <h2 class="work-tile-title">Qlik</h2>
               <p class="mt-2">
-                An article that describes my experience working as a Software Engineering intern for Qlik, a business
+                My experience working as a Software Engineering intern for Qlik, a business
                 intelligence company.
                 <br><br>
                 <b>View article</b>
