--- a/pages/uottahack.html
+++ b/pages/uottahack.html
@@ -265,7 +265,7 @@
 
           </div>
 
-          <!-- Graphics & Merch -->
+          <!-- Takeaways -->
           <div data-aos="fade-in" data-aos-duration="600" data-aos-delay="400">
             <h2 class="mt-3">Takeaways</h2>
             <hr>
