added qlik link

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           </div>
 
           <!-- Qlik -->
-          <div class="row mt-5 tileWrap" data-aos="fade-up" data-aos-duration="800" style="margin-bottom: 6rem;">
+          <div class="row mt-5 tileWrap" data-aos="fade-up" data-aos-duration="800" style="margin-bottom: 6rem;" onclick="location.href='/pages/qlik';">
             <div class="col-lg-4 mt-3 tileTitle">
               <hr>
               <h3 class="work-tile-category">SOFTWARE ENG</h3>
