--- a/pages/uottahack.html
+++ b/pages/uottahack.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Munir — About</title>
+  <title>Munir — uOttaHack</title>
   <!-- Imported fonts-->
   <link href="https://fonts.googleapis.com/css?family=Merriweather:300,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
